--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "^0.14.8",
-    "react-native": "^0.23.0"
+    "react-native": "^0.23.0",
+    "sendbird" : "^2.4.5"
   },
   "devDependencies": {
   }
