--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "^0.14.8",
     "react-native": "^0.23.0",
-    "sendbird" : "^2.4.5"
+    "react-native-vector-icons": "^1.2.1"
   },
   "devDependencies": {
   }
